<resources>
    <string name="app_name">ป้ายจราจรน่ารู้</string>
    <string name="my_name">นายณวพรรษพล เลิศสิทธิธาปัญญา</string>
    <string name="my_major">คณะวิทยาศาสตร์เเละเทคโนโลยี หลักสูตรวิททยาการคอมพิวเตอร์</string>
    <string name="my_university">มหาวิทยาลัยสวนดุสิต</string>
    <string name="my_mobile">Mobile No. : 0908877944</string>
    <string name="my_facebook">https://www.facebook.com/nawapatsaphon.letsitthithaphanya</string>
</resources>
